After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 739792 - v4l2allocator: fix gst_v4l2_allocator_stop prototype
v4l2allocator: fix gst_v4l2_allocator_stop prototype
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other Linux
: Normal normal
: 1.4.5
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-11-07 16:11 UTC by Aurélien Zanelli
Modified: 2014-12-01 15:12 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
v4l2allocator: fix gst_v4l2_alloctor_stop prototype (1.15 KB, patch)
2014-11-07 16:12 UTC, Aurélien Zanelli
none Details | Review
v4l2allocator: fix gst_v4l2_allocator_stop prototype (1.15 KB, patch)
2014-11-07 16:13 UTC, Aurélien Zanelli
committed Details | Review

Description Aurélien Zanelli 2014-11-07 16:11:46 UTC
gst_v4l2_alloctor_stop returns a GstV4l2Return, not a gboolean.
Comment 1 Aurélien Zanelli 2014-11-07 16:12:35 UTC
Created attachment 290194 [details] [review]
v4l2allocator: fix gst_v4l2_alloctor_stop prototype
Comment 2 Aurélien Zanelli 2014-11-07 16:13:48 UTC
Created attachment 290195 [details] [review]
v4l2allocator: fix gst_v4l2_allocator_stop prototype

Oops, it allocator, not alloctor :)
Comment 3 Nicolas Dufresne (ndufresne) 2014-12-01 15:08:02 UTC
Review of attachment 290195 [details] [review]:

Good.
Comment 4 Nicolas Dufresne (ndufresne) 2014-12-01 15:11:41 UTC
1.5
commit 114b84c1a33c8ed6a2a68f0766a0a9672e051b74
Author: Aurélien Zanelli <aurelien.zanelli@parrot.com>
Date:   Fri Nov 7 17:06:49 2014 +0100

    v4l2allocator: fix gst_v4l2_allocator_stop prototype

    gst_v4l2_allocator_stop returns a GstV4l2Return, not a gboolean.

    https://bugzilla.gnome.org/show_bug.cgi?id=739792

And 1.4 commit commit 4f70b88ab56693881a8630147bb0fc64f387a4e1