v4l2allocator: fix gst_v4l2_allocator_stop prototype

gst_v4l2_allocator_stop returns a GstV4l2Return, not a gboolean.

https://bugzilla.gnome.org/show_bug.cgi?id=739792